@@ -1,3 +1,8 @@
+2005-11-08  Piotr Fusik  <fox@scene.pl>
+* atari_ps2.c, devices.c, ui_basic.c: support for directory listings on PS2
+  ("mc0:" only)
+
+
 2005-11-04  Piotr Fusik  <fox@scene.pl>
 * monitor.c: pacified warnings on 64-bit CPUs
 
